clusters/k8s-keiretsu/apps/media/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
spec:
  replicas: 3
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex:latest
          resources:
            requests:
              memory: "3Gi"
              cpu: "1000m"
            limits:
              memory: "6Gi"
              cpu: "2000m"
          ports:
            - containerPort: 32400
              protocol: TCP
            - containerPort: 1900
              protocol: UDP
            - containerPort: 3005
              protocol: TCP
            - containerPort: 5353
              protocol: UDP
            - containerPort: 8324
              protocol: TCP
            - containerPort: 32410
              protocol: UDP
            - containerPort: 32412
              protocol: UDP
            - containerPort: 32413
              protocol: UDP
            - containerPort: 32414
              protocol: UDP
            - containerPort: 32469
              protocol: TCP
          volumeMounts:
            - name: movies-volume
              mountPath: /movies
            - name: tv-volume
              mountPath: /tv
            - name: config-volume
              mountPath: /config
            - name: audiobooks-volume
              mountPath: /audiobooks
            - name: music-volume
              mountPath: /music
      volumes:
        - name: movies-volume
          persistentVolumeClaim:
            claimName: radarr-movies
        - name: tv-volume
          persistentVolumeClaim:
            claimName: sonarr-tv
        - name: config-volume
          persistentVolumeClaim:
            claimName: plex-config
        - name: audiobooks-volume
          persistentVolumeClaim:
            claimName: audiobooks
        - name: music-volume
          persistentVolumeClaim:
            claimName: music
