clusters/k8s-keiretsu/apps/media/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  selector:
    app: plex
  ports:
  - name: http
    port: 32400
    protocol: TCP
    targetPort: 32400
  type: LoadBalancer
  LoadBalancerIP: 10.96.32.32
